--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,5 +15,8 @@ dependencies:
   fl_chart: ^0.67.0
   url_launcher: ^6.2.6
 
+dev_dependencies:
+  flutter_lints: ^3.0.1 
+
 flutter:
   uses-material-design: true
