--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,8 @@
 repos:
   - repo: local
     hooks:
-      - id: sync-about-version
-        name: Sync About version from pubspec.yaml
-        language: system
-        entry: dart tool/bump_about_version.dart
-        pass_filenames: false
-
-      - id: dart-format-fix-analyze
-        name: Format, fix and analyze Dart/Flutter
+      - id: dart-format-fix-analyse
+        name: Format, fix and analyse Dart/Flutter
         language: system
         entry: dart tool/lint_and_fix.dart
         pass_filenames: false
