--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   intl: ^0.19.0
   fl_chart: ^0.67.0
   url_launcher: ^6.2.6
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_lints: ^3.0.1 
