--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   fl_chart: ^0.67.0
   url_launcher: ^6.2.6
   package_info_plus: ^9.0.0
-
+  path_provider: ^2.1.3
+  
 dev_dependencies:
   flutter_lints: ^3.0.1 
 
