--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,11 @@
 *.code-workspace
 
 # Flutter/Dart/Pub related
+**/doc/api/
 .dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+**/generated_plugin_registrant.dart
 .packages
 .pub-cache/
 .pub/
@@ -54,6 +58,22 @@ build/
 **/ios/*.mode1v3
 **/ios/*.mode2v3
 **/ios/DerivedData/
+
+# Windows (generated)
+**/windows/flutter/ephemeral/
+**/windows/flutter/generated_plugin_registrant.cc
+**/windows/flutter/generated_plugin_registrant.h
+**/windows/flutter/generated_plugins.cmake
+
+# macOS (generated)
+**/macos/Flutter/GeneratedPluginRegistrant.swift
+**/macos/Flutter/ephemeral/
+
+# Linux (generated)
+**/linux/flutter/ephemeral/
+**/linux/flutter/generated_plugin_registrant.cc
+**/linux/flutter/generated_plugin_registrant.h
+**/linux/flutter/generated_plugins.cmake
 
 # Web related
 lib/generated_plugin_registrant.dart
